--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
                                 <div class="fs-3 fw-light text-muted">فیتو جیم به شما کمک میکنه تا</div>
                                 <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">به فیزیک ایده‌آل خودتون برسید</span></h1>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html">ورورد مربی</a>
-                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">ورود شاگرد</a>
+                                    <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="/trainerLogin">ورورد مربی</a>
+                                    <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"    href="/traineeLogin">ورود شاگرد</a>
                                 </div>
                             </div>
                         </div>
